--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -59,6 +59,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+  /*min-width: 1000px;*/
 }
 
 .container_two{
@@ -69,9 +70,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  vertical-align: middle;
   width: 95%;
   margin: auto;
-  height: 50px;
 }
 
 h1{
@@ -103,7 +104,7 @@ h1:hover{
 }
 
 hr {
-  width:95%; opacity: .6; box-shadow: 0px 0px 20px black;
+  width:95%; opacity: .6; box-shadow: 2px 0px 20px black;
   margin-top: 4%;
   margin-bottom: 8%;
 }
@@ -132,27 +133,65 @@ h2:hover{
   transform: scale(1.2);
 }
 
-.center a:hover {
+h2.center a:hover {
     color: yellow;
     background: transparent;
+    opacity: 1;
     transition: all .1s ease-in-out;
-
 }
-.left a:hover {
-    color: #ff6000;
+
+h2.left a:hover {
+    color: #ff3c00;
     background: transparent;
+    opacity: 1;
     transition: all .1s ease-in-out;
-
 }
-.right a:hover {
+
+h2.right a:hover {
     color: #00ffba;
+    opacity: 1;
     background: transparent;
     transition: all .1s ease-in-out;
 
 }
-.right_right a:hover {
+
+h2.right_right a:hover {
     color: salmon;
+    opacity: 1;
     background: transparent;
     transition: all .1s ease-in-out;
+
+}
+
+@media (max-width:900px){
+
+  .container_one{
+    width: 100%;
+    margin: auto;
+  }
+
+  h1{
+    font-size: 14vw;
+  }
+  .container_two{
+    width: 85%;
+    margin: auto;
+  }
+
+  .container_three{
+    flex-direction: column;
+    width: 90%;
+    align-content: center;
+    /*align-items: center;*/
+ }
+
+  h2.center > a,
+  h2.left > a,
+  h2.right > a,
+  h2.right_right > a{
+    width: 95%;
+    margin-bottom: 20px;
+    font-size: 4vw;
+  }
 
 }
