--- a/stylesheet/contact.scss
+++ b/stylesheet/contact.scss
@@ -378,7 +378,7 @@ html, body, .main {
   h4.left > a,
   h4.right > a,
   h4.right_right > a{
-    width: 90%%;
+    width: 90%;
     margin-bottom: 20px;
     font-size: 5vw;
     text-align: center;
