--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -1,5 +1,5 @@
-@import '../_sass/_reset.scss';
-@import '../_sass/_flipButton.scss';
+/*@import '../_sass/_reset.scss';
+@import '../_sass/_flipButton.scss';*/
 
 
 /* http://meyerweb.com/eric/tools/css/reset/
