--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -117,27 +117,27 @@ hr {
 
 
 h2.button-row {
-  // -webkit-perspective: 1000px;
-  // -moz-perspective: 1000px;
-  // perspective: 1000px;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  perspective: 1000px;
   font-family: 'Oswald', sans-serif;
   letter-spacing: .15em;
 
 }
 
 h2.button-row > a {
-  // margin: 0px;
-  // padding: 0px;
+  margin: 0px;
+  padding: 0px;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   -o-transform-style: preserve-3d;
   transform-style: preserve-3d;
-  // -webkit-transform: translateZ(-25px);
-  // -moz-transform: translateZ(-25px);
-  // -ms-transform: translateZ(-25px);
-  // -o-transform: translateZ(-25px);
-  // transform: translateZ(-25px);
+  -webkit-transform: translateZ(-25px);
+  -moz-transform: translateZ(-25px);
+  -ms-transform: translateZ(-25px);
+  -o-transform: translateZ(-25px);
+  transform: translateZ(-25px);
   -webkit-transition: -webkit-transform 0.4s;
   -moz-transition: -moz-transform 0.4s;
   transition: transform 0.4s;
@@ -170,16 +170,16 @@ h2.button-row > a::before, h2.button-row > a::after {
 h2.button-row > a::before {
   background-color: #808285;
   color: #fff;
-  // -webkit-transform: rotateY(0deg) translateZ(25px);
-  // -moz-transform: rotateY(0deg) translateZ(25px);
-  // -ms-transform: rotateY(0deg) translateZ(25px);
-  // -o-transform: rotateY(0deg) translateZ(25px);
-  // transform: rotateY(0deg) translateZ(25px);
+  -webkit-transform: rotateY(0deg) translateZ(25px);
+  -moz-transform: rotateY(0deg) translateZ(25px);
+  -ms-transform: rotateY(0deg) translateZ(25px);
+  -o-transform: rotateY(0deg) translateZ(25px);
+  transform: rotateY(0deg) translateZ(25px);
 }
 h2.button-row > a::after {
   background-color: #fff;
-  border-color: #808285;
-  color: #808285;
+  /*border-color: #808285;
+  color: #808285;*/
   -webkit-transform: rotateX(90deg) translateZ(25px);
   -moz-transform: rotateX(90deg) translateZ(25px);
   -ms-transform: rotateX(90deg) translateZ(25px);
@@ -193,6 +193,42 @@ h2.button-row > a:hover {
   -o-transform: translateZ(25px) translateY(25px) rotateX(-90deg);
   transform: translateZ(-25px) translateY(25px) rotateX(-90deg);
 }
+
+h2.center a::after {
+    border-color: #00ffba;
+    color: #00ffba;
+    /*background: transparent;*/
+    opacity: 1;
+    /*transition: all .1s ease-in-out;*/
+}
+
+h2.left a::after {
+    border-color: salmon;
+    color: salmon;
+    opacity: 1;
+    /*background: transparent;*/
+    /*transition: all .1s ease-in-out;*/
+}
+
+h2.right a::after {
+    border-color: yellow;
+    color: yellow;
+    opacity: 1;
+    /*text-shadow: 0px 0px 1px grey;*/
+    /*background: transparent;*/
+    /*transition: all .1s ease-in-out;*/
+
+}
+
+h2.right_right a::after {
+    border-color: #6464FF;
+    color: #6464FF
+    opacity: 1;
+    /*background: transparent;*/
+    /*transition: all .1s ease-in-out;*/
+
+}
+
 
 
 @media (max-width:900px){
