--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -212,7 +212,8 @@ h2.left a::after {
 
 h2.right a::after {
     border-color: yellow;
-    color: yellow;
+    background: black;
+   color: yellow;
     opacity: 1;
     /*text-shadow: 0px 0px 1px grey;*/
     /*background: transparent;*/
