--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -91,8 +91,8 @@ h1 a:hover,
 h1:hover{
   color: white;
   text-shadow: 0px 0px 50px grey;
-  transition: text-shadow 0.5s ease;
-
+  transition: text-shadow 0.25s ease;
+  transition: color .5s ease;
 
 }
 
@@ -101,7 +101,7 @@ hr {
   opacity: .6;
   box-shadow: 2px 0px 20px #808285;
   margin-top: 6%;
-  margin-bottom: 22%;
+  margin-bottom: 15%;
   justify-content: center
 }
 
@@ -112,7 +112,7 @@ hr {
   vertical-align: middle;
   width: 100%;
   height: 100px;
-  margin: -70px;
+  margin: -10%;
 }
 
 
@@ -122,6 +122,9 @@ h2.button-row {
   perspective: 1000px;
   font-family: 'Oswald', sans-serif;
   letter-spacing: .15em;
+  font-size: 1vw;
+  padding: 3vw 3vw 3vw 3vw;
+  display: block;
 
 }
 
@@ -143,7 +146,6 @@ h2.button-row > a {
   transition: transform 0.4s;
   position: absolute;
   align-content: center;
-  // font-size: 10%;
 }
 
 h2.button-row > a::before, h2.button-row > a::after {
@@ -153,7 +155,7 @@ h2.button-row > a::before, h2.button-row > a::after {
   margin: 0;
   padding: 0;
   opacity: 1;
-  width: 140px;
+  width: 10vw;
   height: 50px;
   border: 5px solid #808285;
   box-sizing: border-box;
@@ -176,6 +178,7 @@ h2.button-row > a::before {
   -o-transform: rotateY(0deg) translateZ(25px);
   transform: rotateY(0deg) translateZ(25px);
 }
+
 h2.button-row > a::after {
   background-color: #fff;
   /*border-color: #808285;
@@ -213,12 +216,49 @@ h2.left a::after {
 h2.right a::after {
     border-color: yellow;
     background: black;
-   color: yellow;
+    color: yellow;
     opacity: 1;
     /*text-shadow: 0px 0px 1px grey;*/
     /*background: transparent;*/
     /*transition: all .1s ease-in-out;*/
+}
 
+
+/*flash*/
+/*flash*/
+/*flash*/
+h2.right a::before {
+  -webkit-animation: color-change 1.5s infinite;
+  -moz-animation: color-change 1.5s infinite;
+  -o-animation: color-change 1.5s infinite;
+  -ms-animation: color-change 1.5s infinite;
+  animation: color-change 1.5s infinite;
+}
+
+@-webkit-keyframes color-change {
+    0% { color: yellow; }
+    50% { color: white; }
+    100% { color: yellow; }
+}
+@-moz-keyframes color-change {
+  0% { color: yellow; }
+  50% { color: white; }
+  100% { color: yellow; }
+}
+@-ms-keyframes color-change {
+  0% { color: yellow; }
+  50% { color: white; }
+  100% { color: yellow; }
+}
+@-o-keyframes color-change {
+  0% { color: yellow; }
+  50% { color: white; }
+  100% { color: yellow; }
+}
+@keyframes color-change {
+  0% { color: yellow; }
+  50% { color: white; }
+  100% { color: yellow; }
 }
 
 h2.right_right a::after {
@@ -227,8 +267,8 @@ h2.right_right a::after {
     opacity: 1;
     /*background: transparent;*/
     /*transition: all .1s ease-in-out;*/
-
 }
+
 
 
 
