--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -1,119 +1,26 @@
----
----
-
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-  html, body, div, span, applet, object, iframe,
-  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-  a, abbr, acronym, address, big, cite, code,
-  del, dfn, em, img, ins, kbd, q, s, samp,
-  small, strike, strong, sub, sup, tt, var,
-  b, u, i, center,
-  dl, dt, dd, ol, ul, li,
-  fieldset, form, label, legend,
-  table, caption, tbody, tfoot, thead, tr, th, td,
-  article, aside, canvas, details, embed,
-  figure, figcaption, footer, header, hgroup,
-  menu, nav, output, ruby, section, summary,
-  time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-  }
-  /* HTML5 display-role reset for older browsers */
-  article, aside, details, figcaption, figure,
-  footer, header, hgroup, menu, nav, section {
-    display: block;
-  }
-  body {
-    line-height: 1;
-  }
-  ol, ul {
-    list-style: none;
-  }
-  blockquote, q {
-    quotes: none;
-  }
-  blockquote:before, blockquote:after,
-  q:before, q:after {
-    content: '';
-    content: none;
-  }
-  table {
-    border-collapse: collapse;
-    border-spacing: 0;
-  }
-
-/*CSS RESET ABOVE*/
-/*CSS EDWIN BELOW*/
-
-.img_img{
-  width: 100vw;
+@font-face{
+  font-family: pacifico;
+  src: url(Pacifico-Regular.ttf)
 }
 
-.container_one{
+.email{
+    color: white;
+    font-family: pacifico;
+    text-transform: lowercase;
+    /*text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;*/
+  }
+
+.container_contacts{
+  position: relative;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
-  /*min-width: 1000px;*/
-}
-
-.container_two{
-  margin: auto;
-}
-
-.container_three{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   vertical-align: middle;
-  align-items: center;
-  width: 95%;
-  margin: auto;
+  width: 100%;
+  height: 100px;
+  margin: -10%;
 }
 
-h3{
-  font-family: 'Roboto Slab', serif;
-  color: white;
-  opacity: .8;
-  font-size: 9vw;
-  text-align: center;
-  text-shadow: 0px 0px 50px grey;
-  letter-spacing: .07em;
-  font-weight: bold;
-}
-
-
-h3 a,
-h3 a:visited,
-h3 a:link,
-h3 a:active{
-  text-decoration: none;
-  color: white;
-  opacity: .8;
-  transition: all .1s ease;
-}
-
-h3 a:hover,
-h3:hover{
-  color: white;
-  opacity: 1;
-  text-shadow: 0px 0px 50px black;
-  /*transform: scale(1.02);*/
-}
-
-hr.black {
-  width:95%; opacity: .6; box-shadow: 20px 0px 20px black;
-  margin-top: 4%;
-  margin-bottom: 8%;
-}
 
 h4 a,
 h4 > a:visited,
@@ -123,269 +30,67 @@ h4 > a:active{
   opacity: .8;
   text-align: center;
   font-size: 2vw;
-  font-family: 'Roboto Slab', serif;
+  color: #4d4756;
+  font-family: 'Pacifico', cursive;
   text-decoration: none;
-  color: white;
   transition: all ease-in-out;
   float: left;
-  padding: 5px 11px 5px 11px;
+  padding: 20px 50px 20px 50px;
+  opacity: 1;
+
+  /*font-variant: small-caps;*/
+  text-transform: lowercase;
 }
 
-h4.left a{
+h4.email a{
   font-size: 2.25vw;
 }
 
 h4 a:hover,
 h4:hover{
   color: white;
-  text-shadow: 0px 0px 2px black;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
   /*transform: scale(1.2);*/
 }
 
-h4.center a:hover {
-    color: yellow;
-    background: transparent;
-    transition: all .1s ease-in-out;
+.noflicker{
+  color: #4d4756;
+  text-shadow: none;
 }
-
-h4.left a:hover {
-    color: #ff6000;
-    background: transparent;
-    transition: all .1s ease-in-out;
-}
-
-h4.right a:hover {
-    color: #00ffba;
-    background: transparent;
-    transition: all .1s ease-in-out;
-
-}
-
-h4.right_right a:hover {
-    color: salmon;
-    background: transparent;
-    transition: all .1s ease-in-out;
-
-}
-
-.none{
-  display: none;
-}
-
-.myButton {
-    width: 110px;
-    height: 30px;
-    background-color:#0099cc;
-    text-align: center;
-    color: #FFF;
-    position: relative;
-}
-/* button hover style if required */
-.myButton:hover {
-
-}
-/* generated element for shine effect.
- * normal state is semi-transparent
- * white but with zero width. Set no
- * transition here for no mouse-leave
- * animations. Otherwise the effect
- * will play in reverse when your mouse
- * leaves the element
- */
-.myButton:after {
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 0%;
-    height: 100%;
-    background-color: rgba(255,255,255,0.4);
-    -webkit-transition: none;
-    -moz-transition: none;
-    -ms-transition: none;
-    -o-transition: none;
-    transition: none;
-
-}
-/* on hover we animate the width to
- * 100% and opacity to 0 so the element
- * grows and fades out
- */
-.myButton:hover:after {
-    width: 120%;
-    background-color: rgba(255,255,255,0);
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-}
-
-// FLIP BUTTON -------------->
-// FLIP BUTTON -------------->
-// FLIP BUTTON -------------->
-.button-row {
-  display: -webkit-inline-box;
-  display: -moz-inline-box;
-  display: inline-box;
-  display: -webkit-inline-flex;
-  display: -moz-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-.button-row > div {
-  position: relative;
-  width: 160px;
-  height: 50px;
-  margin: 0 15px;
-  -webkit-perspective: 1000px;
-  -moz-perspective: 1000px;
-  perspective: 1000px;
-}
-.button-row > div > a {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transform: translateZ(-25px);
-  -moz-transform: translateZ(-25px);
-  -ms-transform: translateZ(-25px);
-  -o-transform: translateZ(-25px);
-  transform: translateZ(-25px);
-  -webkit-transition: -webkit-transform 0.25s;
-  -moz-transition: -moz-transform 0.25s;
-  transition: transform 0.25s;
-}
-.button-row > div > a::before, .button-row > div > a::after {
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  width: 160px;
-  height: 50px;
-  position: absolute;
-  border: 5px solid black;
-  box-sizing: border-box;
-  content: attr(title);
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-.button-row > div > a::before {
-  background-color: #000;
+.flicker,
+.flicker a,
+.flicker >a:visited,
+.flicker >a:link,
+.flicker >a:active{
   color: #fff;
-  -webkit-transform: rotateY(0deg) translateZ(25px);
-  -moz-transform: rotateY(0deg) translateZ(25px);
-  -ms-transform: rotateY(0deg) translateZ(25px);
-  -o-transform: rotateY(0deg) translateZ(25px);
-  transform: rotateY(0deg) translateZ(25px);
-}
-.button-row > div > a::after {
-  background-color: #fff;
-  border-color: #000;
-  color: #000;
-  -webkit-transform: rotateX(90deg) translateZ(25px);
-  -moz-transform: rotateX(90deg) translateZ(25px);
-  -ms-transform: rotateX(90deg) translateZ(25px);
-  -o-transform: rotateX(90deg) translateZ(25px);
-  transform: rotateX(90deg) translateZ(25px);
-}
-.button-row > div > a:hover {
-  -webkit-transform: translateZ(-25px) rotateX(-90deg);
-  -moz-transform: translateZ(-25px) rotateX(-90deg);
-  -ms-transform: translateZ(-25px) rotateX(-90deg);
-  -o-transform: translateZ(-25px) rotateX(-90deg);
-  transform: translateZ(-25px) rotateX(-90deg);
+  opacity: 1;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
+  /*transform: scale(1.2);*/
+  z-index: 1000;
 }
 
-/* this is just icing */
-body {
-  font-family: "Oswald", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  text-transform: uppercase;
-  padding: 0;
-  margin: 0;
+h4.linkedin a:hover {
+    /*color: yellow;*/
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
+    transition: all .1s ease-in-out;
 }
 
-.main, h1 {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
+h4.email a:hover {
+    /*color: #ff6000;*/
+    background: transparent;
+    transition: all .1s ease-in-out;
 }
 
-html, body, .main {
-  height: 100%;
-}
-// FLIP BUTTON ENDS  -------------->
-// FLIP BUTTON ENDS -------------->
-// FLIP BUTTON ENDS -------------->
-// FLIP BUTTON ENDS -------------->
+h4.facebook a:hover {
+    /*color: #00ffba;*/
+    background: transparent;
+    transition: all .1s ease-in-out;
 
-@media (max-width:1024px){
-
-  .container_one{
-    width: 100%;
-    margin: auto;
-  }
-
-  h3{
-    font-size: 12vw;
-    text-align: center;
-  }
-  .container_two{
-    width: 70%;
-    margin: auto;
-  }
-
-  .container_three{
-    flex-direction: column;
-    width: 90%;
-    align-content: center;
-    /*align-items: center;*/
- }
-
-  h4.center > a,
-  h4.left > a,
-  h4.right > a,
-  h4.right_right > a{
-     font-size: 2vw;
-     /*background: white;
-     opacity: .6;
-     color: black;*/
-  }
 }
 
- @media (max-width:1024px){
-  h4.center > a,
-  h4.left > a,
-  h4.right > a,
-  h4.right_right > a{
-    width: 90%;
-    margin-bottom: 20px;
-    font-size: 5vw;
-    text-align: center;
-    /*background: white;
-    opacity: .6;
-    color: black;*/
-  }
+h4.instagram a:hover {
+    /*color: salmon;*/
+    background: transparent;
+    transition: all .1s ease-in-out;
 
-  .none{
-    display: none;
-  }
 }
