--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -1,7 +1,7 @@
 @media (max-width:1280px){
 
   .col-md-10{
-    width:70%;
+    width:80%;
   }
 
   .container_nut{
@@ -14,7 +14,7 @@
     }
 
     p#hello{
-      margin-top: 30%;
+      /*margin-top: 30%;*/
       padding-left: 10%;
       padding-right:10%;
     }
