--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -1,3 +1,5 @@
+
+
 @media (max-width:1280px){
 
   .col-md-10{
@@ -27,6 +29,9 @@
 
     .medialabtopnone{
         display: inherit;
+    }
+    #resume_pdf{
+      height: 125vh;
     }
 }
 
