another try with resume size

--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -1,4 +1,4 @@
-#resume_pdf{
+.img_relative{
   height: 100vh;
 }
 
@@ -32,7 +32,8 @@
     .medialabtopnone{
         display: inherit;
     }
-    #resume_pdf{
+
+    .img_relative.labtop{
       height: 125vh;
     }
 }
