--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -1,4 +1,4 @@
-.img_relative{
+.img_relative.labtop{
   height: 100vh;
 }
 
@@ -18,7 +18,7 @@
     }
 
     p#hello{
-      /*margin-top: 30%;*/
+      margin-top: 30%;
       padding-left: 10%;
       padding-right:10%;
     }
