--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -69,14 +69,14 @@
 }
 
 h1 {
-  font-family: 'Roboto Slab', serif;
+  font-family: robotoSlab;
   font-size: 9vw;
   font-weight: bold;
   color: #808285;
   letter-spacing: .07em;
   text-align: center;
   /*text-shadow: 0px 0px 50px grey;*/
-  justify-content: center
+  justify-content: center;
 }
 
 h1 a,
@@ -94,7 +94,10 @@ h1:hover{
   text-shadow: 0px 0px 50px grey;
   transition: text-shadow 0.25s ease;
   transition: color .5s ease;
+}
 
+h1.edwinname{
+  margin-top: -10%;
 }
 
 hr {
