--- a/stylesheet/quote.css
+++ b/stylesheet/quote.css
@@ -1,3 +1,18 @@
+@font-face{
+  font-family: myFirstFont;
+  src: url(Aller_Rg.ttf)
+}
+
+@font-face{
+  font-family: quotefont;
+  src: url(pertibd.ttf)
+}
+
+@font-face{
+  font-family: robotoSlab;
+  src: url(RobotoSlab-Bold.ttf)
+}
+
 h1.wood_shy > a{
   color: yellow;
   background-color: black;
@@ -8,22 +23,12 @@ h1.wood_shy > a{
 .embossed{
   color: #333;
   zoom: 90%;
-    /*background-color: #666;*/
 }
 
 p#hello, .i_believe{
   text-align: center;
 }
 
-@font-face{
-  font-family: myFirstFont;
-  src: url(Aller_rg.ttf)
-}
-
-@font-face{
-  font-family: quotefont;
-  src: url(pertibd.ttf)
-}
 .quote{
   font-size: 5vw;
   font-family: myFirstFont;
@@ -61,32 +66,32 @@ p#hello, .i_believe{
     /*text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff2d95, 0 0 30px #ff2d95, 0 0 40px #ff2d95, 0 0 50px #ff2d95, 0 0 75px #ff2d95;*/
   }
 
-  .quotenone{
-    animation: clipnone 8s linear infinite;
+.quotenone{
+  animation: clipnone 8s linear infinite;
+}
+@keyframes clipnone{
+  0% {
+    clip: rect(0px, 100vw, 100vh, 0px);
   }
-  @keyframes clipnone{
-    0% {
-      clip: rect(0px, 100vw, 100vh, 0px);
-    }
-    20% {
-      clip: rect(0px, 100vw, 0vh, 0px);
-    }
-    50% {
-      clip: rect(0px, 100vw, 100vh, 0px);
-    }
-    60% {
-      clip: rect(0px, 100vw, 100vh, 0px);
-    }
-    70% {
-      clip: rect(0px, 100vw, 100vh, 0px);
-    }
-    95% {
-      clip: rect(0px, 100vw, 100vh, 0px);
-    }
-    100% {
-      clip: rect(0px, 100vw, 100vh, 0px);
-    }
-  }}
+  20% {
+    clip: rect(0px, 100vw, 0vh, 0px);
+  }
+  50% {
+    clip: rect(0px, 100vw, 100vh, 0px);
+  }
+  60% {
+    clip: rect(0px, 100vw, 100vh, 0px);
+  }
+  70% {
+    clip: rect(0px, 100vw, 100vh, 0px);
+  }
+  95% {
+    clip: rect(0px, 100vw, 100vh, 0px);
+  }
+  100% {
+    clip: rect(0px, 100vw, 100vh, 0px);
+  }
+}
 
 .quotenone{
   animation: clipnone 8s linear infinite;
@@ -118,7 +123,6 @@ p#hello, .i_believe{
 .quote.quotenone{
   color: #fbff96;
 }
-
 .quotenone{
   animation: clipnone 8s linear infinite;
 }
@@ -145,7 +149,6 @@ p#hello, .i_believe{
     clip: rect(0px, 100vw, 100vh, 0px);
   }
 }
-
 
 .quote.quoteone{
   color: #ef108f;
@@ -175,8 +178,6 @@ p#hello, .i_believe{
   }
 }
 
-
-
 .quote.quotetwo{
   color: #A2C523;
 }
@@ -203,10 +204,6 @@ p#hello, .i_believe{
     clip: rect(0px, 100vw, 0vh, 0px);
   }
 }
-
-
-
-
 
 .quote.quotethree{
   color: #FF420E;
@@ -235,7 +232,6 @@ p#hello, .i_believe{
   }
 }
 
-
 .quote.quotefour{
   color: #C4DFE6;
 }
@@ -262,8 +258,6 @@ p#hello, .i_believe{
     clip: rect(0px, 100vw, 0vh, 0px);
   }
 }
-
-
 
 .sixtysix{
   position: absolute;
@@ -313,7 +307,6 @@ p#hello, .i_believe{
   100% {
     bottom: 10px;
   }
-
 }
 
 .img_contact{
