--- a/stylesheet/quote.css
+++ b/stylesheet/quote.css
@@ -10,7 +10,7 @@
 
 @font-face{
   font-family: robotoSlab;
-  src: url(RobotoSlab-Bold.ttf)
+  src: url(RobotoSlab-Regular.ttf)
 }
 
 h1.wood_shy > a{
