portfolio images bigger for labtop

--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -46,6 +46,11 @@ div.img_relative.labtop{
     font-weight: lighter;
   }
 
+  .portfolio_images{
+    width: 100%;
+    margin: auto;
+  }
+
 }
 
 
