portfolio images bigger for labtop

--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -47,8 +47,10 @@ div.img_relative.labtop{
   }
 
   .portfolio_images{
-    zoom:120%;
+    width: 90%;
     margin: auto;
+    zoom: 105%;
+    overflow-x: hidden;
   }
 
 }
