--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -60,6 +60,7 @@
   display: flex;
   height: 100vh;
   width: 100vw;
+  z-index: 1000;
 }
 
 .container_two{
@@ -89,7 +90,9 @@ h1 a:active{
 }
 
 h1 a:hover,
-h1:hover{
+h1:hover,
+h1.hover_effect
+{
   color: white;
   text-shadow: 0px 0px 50px grey;
   transition: text-shadow 0.25s ease;
@@ -364,4 +367,9 @@ h2.right_right a::after {
   text-decoration: none;
   color: ivory;
   opacity: .5;
+}
+
+.hover {
+-webkit-user-select: none;
+-webkit-touch-callout: none;
 }
