--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -90,9 +90,7 @@ h1 a:active{
 }
 
 h1 a:hover,
-h1:hover,
-h1.hover_effect
-{
+h1:hover{
   color: white;
   text-shadow: 0px 0px 50px grey;
   transition: text-shadow 0.25s ease;
@@ -367,9 +365,4 @@ h2.right_right a::after {
   text-decoration: none;
   color: ivory;
   opacity: .5;
-}
-
-.hover {
--webkit-user-select: none;
--webkit-touch-callout: none;
 }
