--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -49,6 +49,10 @@ h4.email a{
 h4 a:hover,
 h4:hover{
   color: white;
+  -webkit-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
+  -moz-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
+  -ms-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
+  -o-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
   z-index: 1000;
   /*transform: scale(1.2);*/
@@ -56,6 +60,10 @@ h4:hover{
 
 .noflicker{
   color: #4d4756;
+  -webkit-text-shadow: none;
+  -moz-text-shadow: none;
+  -ms-text-shadow: none;
+  -o-text-shadow: none;
   text-shadow: none;
 }
 .flicker,
@@ -65,6 +73,10 @@ h4:hover{
 .flicker >a:active{
   color: none;
   /*opacity: 1;*/
+  -webkit-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
+  -moz-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
+  -ms-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
+  -o-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
   text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
   /*transform: scale(1.2);*/
 }
