--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -85,15 +85,19 @@ div.img_relative.labtop{
   }
 
   .container_two{
-      width: 120%;
+      width: 110%;
   }
 
   hr {
     box-shadow: 2px 0px 10px #808285;
   }
 
+  h1 {
+    font-size: 10vw;
+  }
+  
   h2.button-row {
-    font-size: 1.5vw;
+    font-size: 1.75vw;
   }
 
 }
